MDL-42682 theme_bootstrapbase: fixed forum search alignment

--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -11,6 +11,13 @@ select {
 
 // Forum
 
+.path-mod-forum .forumsearch {
+    input,
+    .helptooltip {
+        margin: 0 3px;
+    }
+}
+
 .path-mod-forum .forumheaderlist,
 .path-mod-forum .forumheaderlist td {
     border: none;
